--- a/Pages/Format/css.css
+++ b/Pages/Format/css.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Work Sans', sans-serif;
     font-size: 16px;
     line-height: 1.6;
-    background-color: #f3f3f3; /* Pastel background color */
+    background-color: #2b2b2b; /* Pastel background color */
     color: #333;
 }
 
