--- a/Pages/Format/css.css
+++ b/Pages/Format/css.css
@@ -1,7 +1,14 @@
+/* Imports */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
+
+
+
 /* Reset some default styles for better cross-browser consistency */
 body, h1, h2, p, ul {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* Apply a basic styling to the body */
@@ -15,10 +22,11 @@ body {
 
 /* Style the main title */
 .special-h1 {
-    font-family: 'Crimson Text', serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 2em;
     text-align: center;
     margin: 20px 0;
+    color: #ffffff;
 }
 
 /* Style the navigation header */
