--- a/Pages/Format/css.css
+++ b/Pages/Format/css.css
@@ -179,23 +179,20 @@ button:hover {
 .dropdown-content {
     display: block;
     position: relative;
-    width: 100vw; /* Set width to 100% of the viewport width */
-    left: 50%; /* Move to the center */
-    transform: translateX(-50%); /* Offset by its own width to align left edge with viewport */
+    width: 100%;
+    left: 0;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    background-color: #333; /* Dark background for contrast */
+    background-color: #333;
     border-radius: 0 0 5px 5px;
     z-index: 1;
     text-align: center;
-    font-size: 20px; /* Adjusted for readability */
+    font-size: 30px;
     padding: 20px 0;
-    color: #fff; /* Light text for readability */
-    margin: 0; /* Ensure there's no margin */
 }
 
 .dropdown-content a {
     display: inline-block;
-    margin: 20px;
+    margin: auto;
     padding: 20px 20px;
     color: black;
     text-decoration: none;
@@ -339,6 +336,20 @@ button:hover {
 .resource-link:hover {
     text-decoration: underline;
 }
+
+/* Image zoom functionality */
+.enlarge-image {
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+/* Style for zoomed image */
+.enlarge-image.zoomed {
+    transform: scale(2); 
+    z-index: 1000; 
+    position: relative; 
+}
+
 
 /* Mobile Styling */
 @media (max-width: 768px) {
