--- a/Pages/Format/css.css
+++ b/Pages/Format/css.css
@@ -177,7 +177,7 @@ button:hover {
 }
 
 .dropdown-content {
-    display: block;
+    display: flex;
     position: relative;
     width: 100%;
     left: 0;
