slight style change

--- a/Pages/Format/css.css
+++ b/Pages/Format/css.css
@@ -355,7 +355,7 @@ input[type="radio"] {
 /* link styling */
 .resource-link {
     font-weight: bold;
-    color: #B9F1F9;
+    color: #00ddff;
     text-decoration: none;
 }
 
