--- a/Pages/Format/css.css
+++ b/Pages/Format/css.css
@@ -69,7 +69,7 @@ a {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #2B2B2B;
     text-align: center;
     padding: 10px 0;
     margin-top: 20px;
