--- a/Pages/Format/css.css
+++ b/Pages/Format/css.css
@@ -258,6 +258,16 @@ footer {
     
 }
 
+.last-guide-step .prev-guide-step,
+.last-guide-step .next-guide-step {
+    display: none;
+}
+
+/* Ensure the Next Guide button is visible */
+.last-guide-step .next-guide {
+    display: inline-block; /* or 'block' depending on your design */
+}
+
 /* Guide styling */
 
 .facebook-h1 {
